knxd (0.14.10-0) UNRELEASED; urgency=medium

  * Augment the "pace" filter to also consider incoming packets
  * Add packet send retry to EMI drivers

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 07 Apr 2017 13:20:48 +0200

knxd (0.14.9-1) unstable; urgency=medium

  * Move low-level logging to a separate class
  * various state machine fixes
  * fixed processing of CEMI packets
  * refactored all serial interfaces to optionally run across TCP
  * fixed ft12/xemi reset handling

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 06 Apr 2017 18:00:21 +0200

knxd (0.14.8-1) unstable; urgency=medium

  * Fixed USB send timeout handling
  * Handle retries

 -- Matthias Urlichs <matthias@urlichs.de>  Tue, 28 Mar 2017 12:22:04 +0200

knxd (0.14.7-1) unstable; urgency=medium

  * Fix socket activation

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 27 Mar 2017 08:02:18 +0200

knxd (0.14.6-1) unstable; urgency=medium

  * Fix crash starting with systemd

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 26 Mar 2017 23:16:41 +0200

knxd (0.14.5-1) unstable; urgency=medium

  * Add an address= option to the "single" filter.
    * Use the address which the ipt: driver receives from the server
  * Force "pace" filter for multicast client+server
  * Fix address check bug
  * Fix argument parsing bug
  * (Hopefully) fix remaining flow control issue
  * Enhance logging
  * Various smaller stuff

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 26 Mar 2017 15:09:42 +0200

knxd (0.14.4-1) unstable; urgency=medium

  * Auto-add a pace filter in front of the multicast sender.
  * Add an address= option to the "single" filter.

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Mar 2017 04:13:18 +0100

knxd (0.14.3-1) unstable; urgency=medium

  * Various bug fixes.
  * All drivers now implement flow control.
  * "pace" filter:
    * default to 20msec
    * Add a delay-per-byte parameter (1 msec)
  * log send_next stuff with layer 6